--- a/templates/disciplines/ju-jitsu.html.twig
+++ b/templates/disciplines/ju-jitsu.html.twig
@@ -26,12 +26,6 @@
 
 {% block body %}
     <div class="container">
-        <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
-            <strong>Attention!</strong> Cette page est encore en construction.
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
         <ul class="nav nav-tabs flex-column flex-lg-row" id="jujitsuTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="histoireValeurs-tab" data-toggle="tab" href="#histoireValeurs" aria-controls="histoireValeurs" aria-selected="true">Histoire et Valeurs</a>
@@ -45,7 +39,72 @@
         </ul>
         <div class="tab-content" id="jujitsuTabContent">
             <div class="tab-pane fade show active" id="histoireValeurs" role="tabpanel" aria-labelledby="histoireValeurs-tab">
-                <h3>Histoire et Valeurs</h3>
+                <h3>Le Jujitsu, un art martial traditionnel complet et efficace</h3>
+                <p>
+                    Le jujitsu est l’art martial traditionnel qu’utilisaient les samouraïs et dont s’est inspiré Jigoro Kano pour créer le judo,
+                    en sélectionnant et en adaptant certaines techniques.
+                </p>
+                <p>
+                    Le jujitsu est un art martial complet, il comprend :
+                </p>
+                <ul>
+                    <li>
+                        les techniques de projection et de contrôle (immobilisations, clefs de bras et étranglements) utilisées en judo ;
+                    </li>
+                    <li>
+                        des techniques de contrôles supplémentaires (immobilisations à plat ventre, clefs de jambe, de poignet…) ;
+                    </li>
+                    <li>
+                        des techniques de frappes (pieds-poings) ;
+                    </li>
+                    <li>
+                        des défenses contre armes (couteau, bâton…).
+                    </li>
+                </ul>
+                <p>
+                    <u>
+                        Il s’agit donc d’une méthode de combat efficace dont les applications en self défense sont nombreuses.
+                    </u>
+                </p>
+                <h3>
+                    Plusieurs formes d’expression sportive
+                </h3>
+                <p>
+                    La richesse du Jujitsu a permis d’en proposer 3 formes d’expression sportive :
+                </p>
+                <ul>
+                    <li>
+                        le jujitsu combat (ou « fighting system »), dans lequel les pratiquants peuvent s’affronter en utilisant les 3 dimensions du combat
+                        (frappes, projection et combat au sol). Cette pratique est régie par des règles strictes, afin de garantir la sécurité des combattants :
+                        port de protections, frappes directes au visage interdites, comme les frappes sous la ceinture et au sol ;
+                    </li>
+                    <li>
+                        le ne waza , dans lequel les combattants s’affrontent essentiellement au sol et où les frappes sont totalement interdites.
+                        Les combats se déroulent selon un système de points et l’objectif principal est le contrôle de l’adversaire
+                        (clefs, étranglements, immobilisations, retournements, passages de garde…) ;
+                    </li>
+                    <li>
+                        le duo system qui est une forme d’expression technique dans laquelle 2 partenaires doivent restituer, après tirage au
+                        sort des attaques, les enchainements préparés en amont.
+                    </li>
+                </ul>
+                <h3>
+                    Une discipline ouverte à tous
+                </h3>
+                <p>
+                    Toutes les techniques sont bien sûr enseignées en fonction du niveau des élèves et les possibilités sont tellement
+                    nombreuses en jujitsu qu’il existe forcément un cours adapté à votre niveau de connaissances, votre condition physique et vos envies.
+                </p>
+                <h4 class="text-center">
+                    <b>
+                        <u>
+                            AUCUNE EXCUSE DONC, A VOUS D’ESSAYER
+                        </u>
+                    </b>
+                </h4>
+                <div class="text-center">
+                    <img src="{{ asset('assets/jujitsu-image.png') }}" class="img-fluid">
+                </div>
             </div>
             <div class="tab-pane fade" id="cours" role="tabpanel" aria-labelledby="cours-tab">
                 <ul class="nav nav-tabs flex-column flex-lg-row" id="coursJuJitsuTab" role="tablist">
