--- a/templates/actualites/actualites-club-show.html.twig
+++ b/templates/actualites/actualites-club-show.html.twig
@@ -63,12 +63,9 @@
                     {% endfor %}
                 </ol>
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="img-fluid d-block w-100" src="{{ asset('uploads/club/') }}{{ firstImage }}" alt="">
-                    </div>
-                    {% for postImage in post.images|slice(1, post.images.count) %}
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="{{ asset('uploads/club/') }}{{ postImage.image }}" alt="">
+                    {% for index, postImage in post.images %}
+                        <div class="carousel-item {{ index == 0 ? 'active' : '' }}">
+                            <img class="img-fluid d-block" src="{{ asset('uploads/club/') }}{{ postImage.image }}" alt="">
                         </div>
                     {% endfor %}
                 </div>
@@ -89,12 +86,9 @@
                     {% endfor %}
                 </ol>
                 <div class="carousel-inner-little">
-                    <div class="carousel-item active">
-                        <img class="img-fluid d-block w-100" src="{{ asset('uploads/club/') }}{{ firstImage }}" alt="">
-                    </div>
-                    {% for postImage in post.images|slice(1, post.images.count) %}
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="{{ asset('uploads/club/') }}{{ postImage.image }}" alt="">
+                    {% for index, postImage in post.images %}
+                        <div class="carousel-item {{ index == 0 ? 'active' : '' }}">
+                            <img class="img-fluid d-block" src="{{ asset('uploads/club/') }}{{ postImage.image }}" alt="">
                         </div>
                     {% endfor %}
                 </div>
