remove partner agilim - add partner natacha - add possibility to upload multiple photos on creation - change luc logo

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -320,12 +320,12 @@
                     </div>
                     <div class="w-100 d-block d-sm-none"></div>
                     <div class="col my-auto">
-                        <a href="https://www.agilim.fr/" target="_blank">
-                            <img src="{{ asset('assets/logo_agilim.png') }}"
+                        <a href="https://www.facebook.com/AtelierdeNatacha/" target="_blank">
+                            <img src="{{ asset('assets/logo_natacha.jpg') }}"
                                  class="img-fluid"
                                  height="100"
                                  width="300"
-                                 alt="logo_agilim">
+                                 alt="logo_natacha">
                         </a>
                     </div>
                     <div class="col my-auto">
@@ -350,7 +350,7 @@
             </div>
             <div class="text-center py-3">
                 <a href="{{ path('mentionslegales') }}">Mentions légales et crédits</a><br/>
-                © 2020 Copyright: <a href="{{ path('mentionslegales') }}">LUC Judo</a>
+                © {{ 'now' | date('Y') }} Copyright: <a href="{{ path('mentionslegales') }}">LUC Judo</a>
             </div>
         </footer>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
