change color form red to violet

--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -59,12 +59,12 @@
         .carousel-control-next-icon:after {
             content: '>';
             font-size: 55px;
-            color: #A93514;
+            color: #533791;
         }
         .carousel-control-prev-icon:after {
             content: '<';
             font-size: 55px;
-            color: #A93514;
+            color: #533791;
         }
 
         @media screen and (max-width:767px) {
@@ -98,7 +98,7 @@
                         <li data-target="#carouselAcceuilPosts" data-slide-to="3"></li>
                         <li data-target="#carouselAcceuilPosts" data-slide-to="4"></li>
                     </ol>
-                    <div class="carousel-inner" style="background: #A93514">
+                    <div class="carousel-inner" style="background: #533791">
                         <div class="carousel-item active">
                             {% if first.images.count and firstType == 'Club' %}
                                 <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
@@ -291,7 +291,7 @@
                         <li data-target="#carouselAcceuilPosts2" data-slide-to="3"></li>
                         <li data-target="#carouselAcceuilPosts2" data-slide-to="4"></li>
                     </ol>
-                    <div class="carousel-inner-little" style="background: #A93514">
+                    <div class="carousel-inner-little" style="background: #533791">
                         <div class="carousel-item active">
                             {% if first.images.count and firstType == 'Club' %}
                                 <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
@@ -498,7 +498,7 @@
                 </iframe>
                 <h2>156 rue Charles Debierre - Lille</h2>
             </div>
-            <hr style="border: 1px solid #A93514"/>
+            <hr style="border: 1px solid #533791"/>
             <div class="col my-auto">
                 <h2>SALLE DEFAUCOMPRET</h2>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d894.800914630943!2d3.0873630056344954!3d50.62936125849722!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d5faea376d7d%3A0x4f55bddb5cd9f71d!2sEspace%20Sportif%20Defaucompret!5e0!3m2!1sfr!2sfr!4v1595857882269!5m2!1sfr!2sfr"
