--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
                 height: 100%;
             }
             a, a:hover {
-                color: #A93514;
+                color: #533791;
             }
             .white-black-bold-on-hover {
                 color: white;
@@ -63,7 +63,7 @@
     </head>
     <body class="d-flex flex-column">
         <div class="flex-grow-1 flex-shrink-0">
-            <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background: #A93514">
+            <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background: #533791">
                 <a class="border border-black" href="{{ path('accueil') }}" style="background: white"><img src="{{ asset('assets/luc_logo.png') }}" alt="luc_logo"></a>
                 <div class="w-100 d-none d-xl-block"></div>
                 <a href="{{ path('boutique') }}">
@@ -155,7 +155,7 @@
                     </form>
                 </div>
             </nav>
-            <div style="background: #A93514">
+            <div style="background: #533791">
                 <div class="container-fluid">
                     <div class="row text-center justify-content-center">
                         <div class="col d-md-none d-block">
