--- a/templates/club/histoire.html.twig
+++ b/templates/club/histoire.html.twig
@@ -42,7 +42,7 @@
         .main-timeline .timeline-content:before,
         .main-timeline .timeline-content:after{
             content: "";
-            background: linear-gradient(to bottom,#A93514,#A93514);
+            background: linear-gradient(to bottom,#533791,#533791);
             width: 45px;
             height: 45px;
             transform: rotate(-45deg);
@@ -57,7 +57,7 @@
         }
         .main-timeline .timeline-icon{
             color: #fff;
-            background: linear-gradient(to right,#A93514,#A93514);
+            background: linear-gradient(to right,#533791,#533791);
             font-size: 23px;
             text-align: center;
             line-height: 40px;
@@ -71,7 +71,7 @@
         .main-timeline .timeline-icon i{ transform: rotate(45deg); }
         .main-timeline .timeline-year{
             color: #fff;
-            background: linear-gradient(to bottom,#A93514,#A93514,#A93514);
+            background: linear-gradient(to bottom,#533791,#533791,#533791);
             font-size: 32px;
             font-weight: 900;
             text-align: center;
@@ -85,7 +85,7 @@
         }
         .main-timeline .timeline-year:after{
             content: '';
-            background: linear-gradient(to right bottom,#A93514 49%, transparent 50%);
+            background: linear-gradient(to right bottom,#533791 49%, transparent 50%);
             height: 33px;
             width: 33px;
             position: absolute;
@@ -132,17 +132,17 @@
             left: -33px;
         }
         .main-timeline .timeline:nth-child(4n+2) .timeline-content:before,
-        .main-timeline .timeline:nth-child(4n+2) .timeline-icon {background:linear-gradient(to left,#A93514,#A93514);}
-        .main-timeline .timeline:nth-child(4n+2) .timeline-year {background:linear-gradient(to bottom,#A93514,#A93514,#A93514);}
-        .main-timeline .timeline:nth-child(4n+2) .timeline-year:after{background:linear-gradient(to right bottom, #A93514 49%, transparent 50%);}
+        .main-timeline .timeline:nth-child(4n+2) .timeline-icon {background:linear-gradient(to left,#533791,#533791);}
+        .main-timeline .timeline:nth-child(4n+2) .timeline-year {background:linear-gradient(to bottom,#533791,#533791,#533791);}
+        .main-timeline .timeline:nth-child(4n+2) .timeline-year:after{background:linear-gradient(to right bottom, #533791 49%, transparent 50%);}
         .main-timeline .timeline:nth-child(4n+3) .timeline-content:before,
-        .main-timeline .timeline:nth-child(4n+3) .timeline-icon {background:linear-gradient(to bottom,#A93514 ,#A93514);}
-        .main-timeline .timeline:nth-child(4n+3) .timeline-year {background:linear-gradient(to bottom,#A93514,#A93514,#A93514);}
-        .main-timeline .timeline:nth-child(4n+3) .timeline-year:after{background:linear-gradient(to right bottom, #A93514 49%, transparent 50%);}
+        .main-timeline .timeline:nth-child(4n+3) .timeline-icon {background:linear-gradient(to bottom,#533791 ,#533791);}
+        .main-timeline .timeline:nth-child(4n+3) .timeline-year {background:linear-gradient(to bottom,#533791,#533791,#533791);}
+        .main-timeline .timeline:nth-child(4n+3) .timeline-year:after{background:linear-gradient(to right bottom, #533791 49%, transparent 50%);}
         .main-timeline .timeline:nth-child(4n+4) .timeline-content:before,
-        .main-timeline .timeline:nth-child(4n+4) .timeline-icon {background:linear-gradient(to left,#A93514 ,#A93514);}
-        .main-timeline .timeline:nth-child(4n+4) .timeline-year {background:linear-gradient(to bottom,#A93514,#A93514,#A93514);}
-        .main-timeline .timeline:nth-child(4n+4) .timeline-year:after{background:linear-gradient(to right bottom, #A93514 49%, transparent 50%);}
+        .main-timeline .timeline:nth-child(4n+4) .timeline-icon {background:linear-gradient(to left,#533791 ,#533791);}
+        .main-timeline .timeline:nth-child(4n+4) .timeline-year {background:linear-gradient(to bottom,#533791,#533791,#533791);}
+        .main-timeline .timeline:nth-child(4n+4) .timeline-year:after{background:linear-gradient(to right bottom, #533791 49%, transparent 50%);}
         @media screen and (max-width:767px){
             .main-timeline:before{
                 left: 17px;
