--- a/templates/actualites/actualites-nationale-internationale-show.html.twig
+++ b/templates/actualites/actualites-nationale-internationale-show.html.twig
@@ -42,12 +42,12 @@
         .carousel-control-next-icon:after {
             content: '>';
             font-size: 55px;
-            color: #A93514;
+            color: #533791;
         }
         .carousel-control-prev-icon:after {
             content: '<';
             font-size: 55px;
-            color: #A93514;
+            color: #533791;
         }
     </style>
 {% endblock %}
