--- a/templates/club/dojo.html.twig
+++ b/templates/club/dojo.html.twig
@@ -82,7 +82,7 @@
                 <h2>156 rue Charles Debierre - Lille</h2>
             </div>
             <div class="col-sm d-block d-sm-none">
-                <hr style="border: 1px solid #A93514"/>
+                <hr style="border: 1px solid #533791"/>
             </div>
             <div class="col my-auto">
                 <h2>SALLE DEFAUCOMPRET</h2>
