--- a/templates/disciplines/judo.html.twig
+++ b/templates/disciplines/judo.html.twig
@@ -157,7 +157,7 @@
                             <h2>156 rue Charles Debierre - Lille</h2>
                         </div>
                         <div class="col-sm d-block d-sm-none">
-                            <hr style="border: 1px solid #A93514"/>
+                            <hr style="border: 1px solid #533791"/>
                         </div>
                         <div class="col my-auto">
                             <h2>SALLE DEFAUCOMPRET</h2>
