--- a/templates/actualites/actualites-club.html.twig
+++ b/templates/actualites/actualites-club.html.twig
@@ -26,7 +26,7 @@
                 <td colspan="6">no records found</td>
             </tr>
         {% endfor %}
-        <div class="d-none d-md-block">
+        <div>
             {{ knp_pagination_render(posts) }}
         </div>
     </div>
