add link to instagram and logo - fix competition creation

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,7 +73,12 @@
                 </a>
                 <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank" class="d-block d-lg-none">
                     <img src="{{ asset('assets/fb_logo.png') }}"
-                         height="70"
+                         height="55"
+                         alt="fb_logo">
+                </a>
+                <a href="https://instagram.com/lilleuniversiteclubjudo" target="_blank" class="d-block d-lg-none">
+                    <img src="{{ asset('assets/insta_logo.png') }}"
+                         height="55"
                          alt="fb_logo">
                 </a>
                 <div class="w-100 d-none d-xl-block"></div>
@@ -143,12 +148,19 @@
                     </ul>
                 </div>
                 <div class="w-100 d-none d-xl-block"></div>
-                <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank" class="d-none d-lg-block">
-                    <img src="{{ asset('assets/fb_logo.png') }}"
-                         height="70"
-                         alt="fb_logo">
-                </a>
-                <div class="w-100 d-none d-xl-block"></div>
+                <div class="d-none d-lg-block row w-100">
+                    <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank" class="col">
+                        <img src="{{ asset('assets/fb_logo.png') }}"
+                             height="55"
+                             alt="fb_logo">
+                    </a>
+                    <a href="https://instagram.com/lilleuniversiteclubjudo" target="_blank" class="col">
+                        <img src="{{ asset('assets/insta_logo.png') }}"
+                             height="55"
+                             alt="fb_logo">
+                    </a>
+                </div>
+                <div class="w-50 d-none d-xl-block"></div>
                 <div class="d-none d-lg-block">
                     <form class="form-inline">
                         <a class="border border-black" href="{{ path('accueil') }}" style="background: white"><img src="{{ asset('assets/luc_logo.png') }}" alt="luc_logo"></a>
