change shop logo and add text

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -70,6 +70,7 @@
                     <img src="{{ asset('assets/boutique-logo.png') }}"
                          height="70"
                          alt="boutique_logo">
+                    <b class="text-white">BOUTIQUE</b>
                 </a>
                 <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank" class="d-block d-lg-none">
                     <img src="{{ asset('assets/fb_logo.png') }}"
