--- a/templates/club/dojo.html.twig
+++ b/templates/club/dojo.html.twig
@@ -96,6 +96,30 @@
                 </div>
                 <h2>72-74 rue du Long Pot - Lille</h2>
             </div>
+            <div class="col my-auto">
+                <h2>SALLE BASTIE</h2>
+                <div class="iframe-outer">
+                    <div class="iframe-inner">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10119.455024752091!2d3.0648855!3d50.6482214!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c32a706d5bc06b%3A0x5b3f5456e8cb0176!2sSalle%20de%20Sport%20Maryse%20Basti%C3%A9!5e0!3m2!1sfr!2sfr!4v1686233879185!5m2!1sfr!2sfr"
+                                class="embed-responsive-item"
+                                allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+                <h2>10 rue Paul Ramadier - Lille</h2>
+            </div>
+            <div class="col my-auto">
+                <h2>SALLE LILLE-MOULINS</h2>
+                <div class="iframe-outer">
+                    <div class="iframe-inner">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d632.8630954486223!2d3.0703269696943596!3d50.618712498226586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d5956524314b%3A0x94b69420a5d563a3!2sRue%20de%20Mulhouse%2C%2059000%20Lille!5e0!3m2!1sfr!2sfr!4v1686234478209!5m2!1sfr!2sfr"
+                                class="embed-responsive-item"
+                                allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+                <h2>rue de Mulhouse - Lille</h2>
+            </div>
         </div>
     </div>
 {% endblock %}
