add instagram and phone number on contact page

--- a/templates/club/contact.html.twig
+++ b/templates/club/contact.html.twig
@@ -17,5 +17,14 @@
                  class="img-fluid"
                  alt="FB Logo">
         </a>
+        <a href="https://instagram.com/lilleuniversiteclubjudo" target="_blank">
+            <img src="{{ asset('assets/insta_logo.png') }}"
+                 class="img-fluid"
+                 alt="Instagram Logo">
+        </a>
+    </div>
+    <br/>
+    <div class="container text-center">
+        <h2>Nous appeler: <a href="tel:06.47.36.08.58"><b>06.47.36.08.58</b></a></h2>
     </div>
 {% endblock %}
