--- a/templates/club/dojo.html.twig
+++ b/templates/club/dojo.html.twig
@@ -70,7 +70,7 @@
     <div class="container">
         <div class="row text-center justify-content-center">
             <div class="col my-auto">
-                <h2>SALLE DEBEYRE</h2>
+                <h2 style="color: #533791"><b>SALLE DEBEYRE</b></h2>
                 <div class="iframe-outer">
                     <div class="iframe-inner">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.75805227567!2d3.071911315859676!3d50.63161128217546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d58ccd84a095%3A0x2bf07e00b55a0265!2sSalle%20Debeyre!5e0!3m2!1sfr!2sfr!4v1595951862220!5m2!1sfr!2sfr"
@@ -85,7 +85,7 @@
                 <hr style="border: 1px solid #533791"/>
             </div>
             <div class="col my-auto">
-                <h2>SALLE DEFAUCOMPRET</h2>
+                <h2 style="color: #533791"><b>SALLE DEFAUCOMPRET</b></h2>
                 <div class="iframe-outer">
                     <div class="iframe-inner">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d894.800914630943!2d3.0873630056344954!3d50.62936125849722!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d5faea376d7d%3A0x4f55bddb5cd9f71d!2sEspace%20Sportif%20Defaucompret!5e0!3m2!1sfr!2sfr!4v1595857882269!5m2!1sfr!2sfr"
@@ -97,7 +97,7 @@
                 <h2>72-74 rue du Long Pot - Lille</h2>
             </div>
             <div class="col my-auto">
-                <h2>SALLE BASTIE</h2>
+                <h2 style="color: #533791"><b>SALLE BASTIE</b></h2>
                 <div class="iframe-outer">
                     <div class="iframe-inner">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10119.455024752091!2d3.0648855!3d50.6482214!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c32a706d5bc06b%3A0x5b3f5456e8cb0176!2sSalle%20de%20Sport%20Maryse%20Basti%C3%A9!5e0!3m2!1sfr!2sfr!4v1686233879185!5m2!1sfr!2sfr"
@@ -109,7 +109,7 @@
                 <h2>10 rue Paul Ramadier - Lille</h2>
             </div>
 {#            <div class="col my-auto">#}
-{#                <h2>SALLE LILLE-MOULINS</h2>#}
+{#                <h2 style="color: #533791"><b>SALLE LILLE-MOULINS</b></h2>#}
 {#                <div class="iframe-outer">#}
 {#                    <div class="iframe-inner">#}
 {#                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d632.8630954486223!2d3.0703269696943596!3d50.618712498226586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d5956524314b%3A0x94b69420a5d563a3!2sRue%20de%20Mulhouse%2C%2059000%20Lille!5e0!3m2!1sfr!2sfr!4v1686234478209!5m2!1sfr!2sfr"#}
