add silver label

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -311,6 +311,16 @@
                 </a>
             </div>
             <div class="container">
+                <div class="text-center">
+                    <h4>
+                        Le club du LUC est labellisé Argent par France Judo
+                    </h4>
+                    <img src="{{ asset('assets/label_argent.png') }}"
+                         class="img-fluid"
+                         alt="label_argent">
+                </div>
+            </div>
+            <div class="container">
                 <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-center">Sponsors</h5>
                 <div class="row justify-content-center text-center">
                     <div class="col my-auto">
